# representation_interface

./: CMakeLists.txt  README.md  mainpage.dox  manifest.xml  package.xml
include/representation_interface/: dummy_representation_interface.h  nea_distance_map_representation_interface.h  nea_obstacle_grid_representation_interface.h  obstacle_grid_representation_interface.h  representation_interface.h
src/: nea_distance_map_representation_interface.cpp  nea_obstacle_grid_representation_interface.cpp
test/: nea_distance_map_test.cpp  nea_grid_map_test.cpp
